--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,8 @@ MarkupSafe==0.18
 PyYAML==3.10
 Werkzeug==0.9.4
 gunicorn==18.0
+hiredis==0.1.1
 itsdangerous==0.23
+redis==2.7.1
+git+https://github.com/lucasmarshall/redis-simple-cache.git
 wsgiref==0.1.2
